fixing scrollbar issue for landing page firefox

--- a/components/expandedLandingCards/expandedLandingCards.module.css
+++ b/components/expandedLandingCards/expandedLandingCards.module.css
@@ -71,6 +71,7 @@
 
 .justifySpaceBetween {
   justify-content: space-between;
+  scrollbar-width: none;
 }
 
 .justifyCenter {
